--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,8 +9,8 @@
    <!-- <link rel="stylesheet" href="../static/login.css"> -->
     <title>{% block title %} {% endblock %}</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="background-color: rgb(235,89,108);">
+    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: rgb(235,89,108); border-bottom: 1px white solid;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
