--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,6 +10,8 @@
         </button>
       </li>
       {% endfor %}
+
+
     </ul>
     <form method="POST">
       <textarea name="note" id="note" class="form-control"></textarea>
@@ -18,4 +20,45 @@
         <button type="submit" class="btn btn-primary">Add Note</button>
       </div>
     </form>
+
+
+
+     <div class="container">
+       <div class="account-header">
+           <a href="#"><img class="main-account" src="../static/sketch/icons8-account-50.png"></a>
+           <a href="#"><img class="main-chat" src="../static/sketch/icons8-chat-50.png"></a>
+       </div>
+       
+      
+          
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="10000000" >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="../static/sketch/girl2.jpeg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="../static/sketch/girl3.jpeg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="../static/sketch/girl1.jpeg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+       
+       
+       <div class="option-container">
+        <a href="#"><img class="main-dislike" src="../static/sketch/cancel.png"></a>
+      
+       <a href="#"><img class="main-heart" src="../static/sketch/heart.png"></a>
+       </div>
+   </div>
+   </div> 
     {% endblock %}
